# racecar_ws

./: .gitmodules  README.md  boardSetup.sh  frames.gv  installFullRaceCar.sh  installFullRaceCarLinuxVr.sh  main.launch  start.sh  startUpRC.sh  windowSetup.sh
arm-frc2019-linux-gnueabi/include/: LICENSE.txt  SimulationAdapter.h
arm-frc2019-linux-gnueabi/include/navx/: AHRS.h
arm-frc2019-linux-gnueabi/include/rev/: CANDigitalInput.h  CANEncoder.h  CANError.h  CANPIDController.h  CANSparkMax.h  CANSparkMaxLowLevel.h  ControlType.h  SparkMax.h
devel/lib/adi_driver/: adis16470_node  adis16495_node  adxl345_node
devel/lib/odometry_estimation/: test_tf_odometry
devel/lib/pico_zense/: DepthFrameReader  FrameViewer  IrFrameReader  RGBFrameReader  WDR  publisher
devel/lib/pkgconfig/: adi_driver.pc  odometry_estimation.pc  pico_zense.pc
gitInstallScripts/: 10-local.rules  boardSetup.sh  computerSetup.sh  dependencies.sh  ros_dependencies_melodic.sh  tempForkedReposInstall.sh  windowSetup.sh
jetson_setup/: 10-local.rules  ROSJetsonMaster.sh  master.sh  master_launch.service  setup_environment.sh  setup_service.sh
racecar_ws/: frames.gv  log.txt
racecar_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
racecar_ws/src/: frames.gv
racecar_ws/src/adi_imu_kinetic/: README.md  installIMU.sh
racecar_ws/src/adi_lidar_melodic/: CMakeLists.txt  README.md  package.xml
racecar_ws/src/adi_slam_gmapping_melodic/: .gitignore
racecar_ws/src/adi_tof_melodic/: CMakeLists.txt  package.xml
racecar_ws/src/adi_usb_cam_melodic/: installUSBCamNode.sh
racecar_ws/src/adi_vesc_melodic/: README.md
racecar_ws/src/adi_vesc_melodic/vesc_ackermann/: CMakeLists.txt  vesc_ackermann_nodelet.xml
racecar_ws/src/adi_vesc_melodic/vesc_ackermann/include/vesc_ackermann/: vesc_to_imuodom.h  vesc_to_odom.h
racecar_ws/src/adi_vesc_melodic/vesc_ackermann/launch/: ackermann_to_vesc_node.launch
racecar_ws/src/adi_vesc_melodic/vesc_ackermann/src/: ackermann_to_vesc.cpp  ackermann_to_vesc_node.cpp  cmd_ack.cpp  cmdvel.py  py_converter.py  vesc_to_imuodom.cpp  vesc_to_imuodom_node.cpp  vesc_to_imuodom_nodelet.cpp  vesc_to_odom.cpp  vesc_to_odom_node.cpp
racecar_ws/src/adi_vesc_melodic/vesc_ackermann/src/data_gathering/: imusubs.cpp  joystick.cpp  odomsubs.cpp
racecar_ws/src/cmake_modules/: .CMakeOpt.cmake.un~
racecar_ws/src/launch/: CMakeLists.txt  data_gathering.launch  main.launch  main.rviz  navigation.launch  navigation.rviz  package.xml  pico.rviz  robot.urdf  robot_model.launch  robot_model.rviz  robot_model_test.launch  rosconsole.conf
racecar_ws/src/maps/: my_map.pgm  my_map.yaml  my_map_second.pgm  my_map_second.yaml  mymap.yaml.pgm  mymap.yaml.yaml  mymap1.yaml.pgm  mymap1.yaml.yaml  mymap2.yaml.pgm  mymap2.yaml.yaml  mymap3.yaml.pgm  mymap3.yaml.yaml
racecar_ws/src/navigation/: .travis.yml  howToUseNav
racecar_ws/src/pico_zense/: CMakeLists.txt  package.xml
racecar_ws/src/racecar_2dnav/: CMakeLists.txt  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  (+2 more)
src/adi_driver2/: package.xml
src/odometry_estimation/: CMakeLists.txt
(+337 files in other folders)
